--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "dev": "nodemon",
     "start": "node ./src/index.js",
-    "test": "jest"
+    "test": "jest",
+    "build": "npm i"
   },
   "keywords": [],
   "author": "",
